--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <button id="loadButton" class="btn btn-primary">Load in Iframe</button>
     </div>
-    <div class="ratio ratio-16x9">
+    <div class="w-100 vh-100">
       <iframe id="embedFrame" src="" title="Embedded Content" allowfullscreen></iframe>
     </div>
     <!-- Bootstrap JS Bundle with Popper -->
