--- a/index.html
+++ b/index.html
@@ -3,37 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <title>Iframe Bootstrap Example</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      .no-gap {
-        padding: 0;
-        margin: 0;
-      }
-      .full-width {
-        width: 100%;
-      }
-      .header {
-        padding: 1rem;
-      }
-    </style>
   </head>
-  <body class="no-gap">
-    <div class="header">
+  <body>
+    <div class="container-fluid p-0">
       <h1 class="mb-3">Iframe Embedder</h1>
       <div class="mb-2">
         <label for="linkInput" class="form-label">Enter URL:</label>
         <input type="text" class="form-control full-width" id="linkInput" placeholder="https://example.com">
       </div>
-      <button id="loadButton" class="btn btn-primary">Load in Iframe</button>
+      <button id="loadButton" class="btn btn-primary mb-4">Load in Iframe</button>
     </div>
     <div class="w-100 vh-100">
-      <iframe id="embedFrame" src="" title="Embedded Content" allowfullscreen></iframe>
+      <iframe class="w-100 vh-100" id="embedFrame" src="" title="Embedded Content" allowfullscreen></iframe>
     </div>
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -45,5 +29,7 @@
         }
       });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
   </body>
 </html>
